Fix styles for buttons on red slides (was broken in #18) (#19)

--- a/src/styles/slide.css
+++ b/src/styles/slide.css
@@ -33,7 +33,7 @@
       }
     }
 
-    a {
+    a:not(.btn) {
       color: $yellow;
 
       &:hover {
